--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1,3 +1,13 @@
+@import "semantic.css";
+
 body {
-  background-color: grey;
+  height: 100%;
+  padding: 80px 60px 120px 180px;
+}
+
+.container {
+  border: 5px solid black;
+  height: 100%;
+  background-color: white;
+  padding: 80px;
 }
