--- a/src/index.hbs
+++ b/src/index.hbs
@@ -12,7 +12,7 @@
     <link href="fonts/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -50,18 +50,7 @@
       <p>I was born and raised in Redmond, which is a suburb of Seattle. In High School I played varsity basketball. I also worked as a lifeguard and coach at the local pool.</p>
     </div>
     <div class="">
-      <svg class="icon" version="1.0" xmlns="http://www.w3.org/2000/svg" width="128.000000pt" height="128.000000pt" viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
-        <metadata>
-        Created by Joe Mercer, (c) 2014.
-        </metadata>
-        <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)"
-        fill="#000000" stroke="none">
-        <path d="M640 935 l0 -105 95 0 95 0 0 -190 0 -190 -190 0 -190 0 0 95 0 95
-        -105 0 -105 0 0 -133 c0 -118 3 -138 22 -177 17 -33 35 -51 68 -67 43 -22 54
-        -23 310 -23 256 0 267 1 310 23 33 16 51 34 68 67 21 43 22 52 22 377 l0 333
-        -200 0 -200 0 0 -105z"/>
-        </g>
-      </svg>
+      {{> icon}}
     </div>
 
     <script>
@@ -74,6 +63,6 @@
       ga('send', 'pageview');
     </script>
 
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
