typography and basic spacing

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -12,6 +12,10 @@
     <link href="fonts/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
+    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+
     <link rel="stylesheet" type="text/css" href="styles/main.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -22,36 +26,21 @@
   </head>
   <body>
 
-    <div class="">
-      <p>Hey folks, I'm @jomrcr.</p>
+    <section class="container post">
 
-      <p>I study <b class="aqua">mathematics</b> in the co-op program at the University of Waterloo, and in the off terms I intern at tech companies.</p>
-
-      <p>This term I've declared my major for <b class="red">Combinatorics and Optimization</b>, which means I'm taking a bunch of CO classes.</p>
-
-      <p>Last Winter I was interning as a PM @ Microsoft in Seattle, which is also where I grew up. I was helping build the Activity Feed on <b class="indigo">Xbox Live</b>, and it was a lot of fun experiencing the process from the PM perspective. One of the things that surprised me the most was how much alignment happens behind the scenes. I was working with <b class="amber">designers and developers</b>, but at the scale of Microsoft I was also working behind the scenes to align with legal, security, privacy, advertising teams.</p>
-
-      <p>In the Fall I was studying abroad in Hong Kong at HKUST. It was an exciting time to be there; I participated in the #UmbrellaRevolution. And <b class="orange">Hong Kong</b> is absolutely gorgeous. And milk tea and dim sum. I was also taking Pure Math courses, in Number Theory and Geometry.</p>
-
-      <p>The term before that I was doing a Software Engineering internship @ <b class="blue">Noom</b>, a mobile startup in NYC. Living in the city was crazy. I was in SoHo and in the East Village, and I was working in Chelsea. All the eating. Working at a mobile company was interesting, but I think my pre-biases hold. I'm a web guy. My favorite part about Noom was getting to participate in the Design process, and interact closely with the users. I also got to do some UX research type stuff.</p>
-
-      <p>My fifth school term I was in Mathematics, but unsure which direction to take. So I did a little bit of everything: Pure Math, Combinatorics, Optimization, Statistics, Computer Science (Logic), and Applied Math (Calculus).</p>
-
-      <p>For my second internship I was on the web team @ Tagged in SF.</p>
-
-      <p>I'm surprisingly good at pool.</p>
-
-      <p>For my fourth school term I switched from Management Engineering to Mathematics, with the intent of majoring in CS. I took all the CS courses I could, but ended up liking them as much as I was expecting. I was also taking the Advanced Version of Linear Algebra 2, which was crazy hard.</p>
-
-      <p>For my first internship I was working @ Bazaarvoice in Austin. Working with clutch team of JavaScript developers: Alex Sexton, Rebecca Murphy. This is probably why I'm a web guy now.</p>
-
-      <p>For my first three terms I was in Management Engineering. I kind of killed it. Top of my class.</p>
-
-      <p>I was born and raised in Redmond, which is a suburb of Seattle. In High School I played varsity basketball. I also worked as a lifeguard and coach at the local pool.</p>
-    </div>
-    <div class="">
       {{> icon}}
-    </div>
+
+      <h1>Hey folks, I'm <a href="!!!" target="_blank" class="hover-link">@jomrcr</a>.</h1>
+
+      <p>I study <b class="aqua">mathematics</b> in the co-op program at the University of Waterloo. My focus is in combinatorics (counting things), optimization, statistics, and pure mathematics.</p>
+
+      <p>In the Fall I'll be interning as a <b>data scientist</b> at Facebook in the South Bay. Previously I've interned as a program manager at Microsoft, a mobile developer at Noom, and as a web developer at Tagged (ifwe), and Bazaarvoice.</p>
+
+      <p>My studies and internships have taken me around the world. I've studied abroad in Hong Kong, and worked in Seattle, NYC, SF, and Austin. I love travelling to new places, trying new things, and making new friends.</p>
+
+      <p>Come say <a href="!!!" target="_blank" class="hover-link">hello</a> :)</p>
+
+    </section>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
