--- a/src/index.hbs
+++ b/src/index.hbs
@@ -26,19 +26,25 @@
   </head>
   <body>
 
-    <section class="container post">
+    <div class="border left"></div>
+    <div class="border right"></div>
+    <div class="border top"></div>
+    <div class="border bottom"></div>
 
+    <section class="container">
       {{> icon}}
 
-      <h1>Hey folks, I'm <a href="!!!" target="_blank" class="hover-link">@jomrcr</a>.</h1>
+      <article class="post">
+        <h1>Hey folks, I'm <a href="!!!" target="_blank" class="hover-link">@jomrcr</a>.</h1>
 
-      <p>I study <b class="aqua">mathematics</b> in the co-op program at the University of Waterloo. My focus is in combinatorics (counting things), optimization, statistics, and pure mathematics.</p>
+        <p>I study <b class="aqua">mathematics</b> in the co-op program at the University of Waterloo. My focus is in combinatorics (counting things), optimization, statistics, and pure mathematics.</p>
 
-      <p>In the Fall I'll be interning as a <b>data scientist</b> at Facebook in the South Bay. Previously I've interned as a program manager at Microsoft, a mobile developer at Noom, and as a web developer at Tagged (ifwe), and Bazaarvoice.</p>
+        <p>In the Fall I'll be interning as a <b>data scientist</b> at Facebook in the South Bay. Previously I've interned as a program manager at Microsoft, a mobile developer at Noom, and as a web developer at Tagged (ifwe), and Bazaarvoice.</p>
 
-      <p>My studies and internships have taken me around the world. I've studied abroad in Hong Kong, and worked in Seattle, NYC, SF, and Austin. I love travelling to new places, trying new things, and making new friends.</p>
+        <p>My studies and internships have taken me around the world. I've studied abroad in Hong Kong, and worked in Seattle, NYC, SF, and Austin. I love travelling to new places, trying new things, and making new friends.</p>
 
-      <p>Come say <a href="!!!" target="_blank" class="hover-link">hello</a> :)</p>
+        <p>Come say <a href="!!!" target="_blank" class="hover-link">hello</a> :)</p>
+      </article>
 
     </section>
 
