--- a/src/index.hbs
+++ b/src/index.hbs
@@ -35,7 +35,7 @@
       {{> icon}}
 
       <article class="post">
-        <h1>Hey folks, I'm <a href="!!!" target="_blank" class="hover-link">@jomrcr</a>.</h1>
+        <h1 class="post-title">Hey folks, I'm <a href="!!!" target="_blank" class="hover-link">@jomrcr</a>.</h1>
 
         <p>I study <b class="aqua">mathematics</b> in the co-op program at the University of Waterloo. My focus is in combinatorics (counting things), optimization, statistics, and pure mathematics.</p>
 
