colorful hover effect

--- a/src/partials/icon.hbs
+++ b/src/partials/icon.hbs
@@ -1,4 +1,4 @@
-<svg class="icon" version="1.0" xmlns="http://www.w3.org/2000/svg" width="128.000000pt" height="128.000000pt" viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
+<svg class="icon {{class}}" version="1.0" xmlns="http://www.w3.org/2000/svg" width="128.000000pt" height="128.000000pt" viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
   <metadata>
     Created by Joe Mercer, (c) 2014.
   </metadata>
