--- a/src/partials/icon.hbs
+++ b/src/partials/icon.hbs
@@ -2,7 +2,7 @@
   <metadata>
     Created by Joe Mercer, (c) 2014.
   </metadata>
-  <g class="{{class}} lime" transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)"
+  <g class="{{class}}" transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)"
   fill="#000000" stroke="none">
     <path d="M640 935 l0 -105 95 0 95 0 0 -190 0 -190 -190 0 -190 0 0 95 0 95
     -105 0 -105 0 0 -133 c0 -118 3 -138 22 -177 17 -33 35 -51 68 -67 43 -22 54
