--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -112,6 +112,11 @@ article {
 			color: orange;
 		}
 	}
+
+	b {
+		font-family: 'Ubuntu','Open Sans','Helvetica',sans-serif;
+		font-size: 20px;
+	}
 }
 
 
