--- a/src/index.hbs
+++ b/src/index.hbs
@@ -32,7 +32,7 @@
     <div class="border bottom"></div>
 
     <section class="container">
-      {{> icon class='colorful purple'}}
+      {{> icon class=''}}
 
       <article class="post">
         <h1 class="post-title">Hey folks, I'm <a href="!!!" target="_blank" class="!!!">@jomrcr</a>.</h1>
