go colorful on hover on J

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -169,7 +169,7 @@ b.colorful {
   } .-;
 }
 
-.icon g.colorful {
+.icon g {
 	//.transition(fill .2s cubic-bezier(0.165,0.630,0.140,0.820));
 	.transition(fill 2s ease-in-out);
 
