--- a/src/index.hbs
+++ b/src/index.hbs
@@ -32,7 +32,7 @@
     <div class="border bottom"></div>
 
     <section class="container">
-      {{> icon class=''}}
+      {{> icon class='purple'}}
 
       <article class="post">
         <h1 class="post-title">Hey folks, I'm <a href="!!!" target="_blank" class="!!!">@jomrcr</a>.</h1>
@@ -41,7 +41,7 @@
 
         <p>In the Fall I'll be interning as a <b class="colorful">data scientist</b> at Facebook in the South Bay. Previously I've interned as a program manager at Microsoft, a mobile developer at Noom, and as a web developer at Tagged (ifwe), and Bazaarvoice.</p>
 
-        <p>My studies and internships have taken me around the world. I've studied abroad in Hong Kong, and worked in Seattle, NYC, SF, and Austin. I love travelling to new places, trying new things, and making new friends.</p>
+        <p>My studies and internships have taken me around the world. I've studied abroad in <b class="colorful">Hong Kong</b>, and worked in <b class="colorful">Seattle</b>, <b class="colorful">NYC</b>, <b class="colorful">SF</b>, and <b class="colorful">Austin</b>. I love travelling to new places, trying new things, and making new friends.</p>
 
         <p>Come say <a href="!!!" target="_blank" class="colorful">hello</a> :)</p>
       </article>
