--- a/src/index.hbs
+++ b/src/index.hbs
@@ -35,7 +35,7 @@
       {{> icon class='purple'}}
 
       <article class="post">
-        <h1 class="post-title">Hey folks, I'm <a href="!!!" target="_blank" class="!!!">@jomrcr</a>.</h1>
+        <h1 class="post-title">Hey folks, I'm <a href="!!!" target="_blank" class="colorful">@jomrcr</a>.</h1>
 
         <p>I study <b class="colorful">mathematics</b> in the co-op program at the University of Waterloo. My focus is in combinatorics (counting things), optimization, statistics, and pure mathematics.</p>
 
