--- a/src/index.hbs
+++ b/src/index.hbs
@@ -43,6 +43,16 @@
 
         <p>My studies and internships have taken me around the world. I've studied abroad in <b class="colorful">Hong Kong</b>, and worked in <b class="colorful">Seattle</b>, <b class="colorful">NYC</b>, <b class="colorful">SF</b>, and <b class="colorful">Austin</b>. I love travelling to new places, trying new things, and making new friends.</p>
 
+        <div class="map-container">
+          <span class="dot colorful seattle"></span>
+          <span class="dot colorful waterloo"></span>
+          <span class="dot colorful austin"></span>
+          <span class="dot colorful sf"></span>
+          <span class="dot colorful nyc"></span>
+          <span class="dot colorful hk"></span>
+          {{> map}}
+        </div>
+
         <p>Come say <a href="!!!" target="_blank" class="colorful">hello</a> :)</p>
       </article>
 
