--- a/src/index.hbs
+++ b/src/index.hbs
@@ -39,9 +39,9 @@
 
         <p>I study <b class="colorful">mathematics</b> in the co-op program at the University of Waterloo. My focus is in combinatorics (counting things), optimization, statistics, and pure mathematics.</p>
 
-        <p>In the Fall I'll be interning as a <b class="colorful">data scientist</b> at Facebook in the South Bay. Previously I've interned as a program manager at Microsoft, a mobile developer at Noom, and as a web developer at Tagged (ifwe), and Bazaarvoice.</p>
+        <p>In the Fall I'll be a <b class="colorful">data science</b> intern at Facebook in the South Bay. Previously I've interned as a program manager at Microsoft, a mobile developer at Noom, and as a web developer at Tagged (ifwe), and Bazaarvoice.</p>
 
-        <p>My studies and internships have taken me around the world. I've studied abroad in <b class="colorful">Hong Kong</b>, and worked in <b class="colorful">Seattle</b>, <b class="colorful">NYC</b>, <b class="colorful">SF</b>, and <b class="colorful">Austin</b>. I love travelling to new places, trying new things, and making new friends.</p>
+        <p>My studies and internships have taken me around the <b class="colorful">world</b>. I've studied abroad in Hong Kong, and worked in Seattle, NYC, SF, and Austin.</p>
 
         <div class="map-container">
           <span class="dot colorful seattle"></span>
@@ -53,7 +53,10 @@
           {{> map}}
         </div>
 
+        <p>I love travelling to new places, trying new things, and making new friends.</p>
+
         <p>Come say <a href="!!!" target="_blank" class="colorful">hello</a> :)</p>
+
       </article>
 
     </section>
