--- a/src/index.hbs
+++ b/src/index.hbs
@@ -32,7 +32,10 @@
     <div class="border bottom"></div>
 
     <section class="container">
-      {{> icon class='purple'}}
+
+      <div class="icon-container">
+        {{> icon class='purple'}}
+      </div>
 
       <article class="post">
         <h1 class="post-title">Hey folks, I'm <a href="!!!" target="_blank" class="colorful">@jomrcr</a>.</h1>
