--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -180,11 +180,16 @@ b.colorful {
 
 .container {
 
-  .icon {
-  	height: 250px;
+	.icon-container {
+		height: 250px;
   	width: 100%;
   	margin-top: 100px;
   	margin-bottom: 20px;
+	}
+
+  .icon {
+  	height: 100%;
+  	width: 100%;
   }
 
 }
