resize on start

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -42,7 +42,7 @@
 
         <p>I study <b class="colorful">mathematics</b> in the co-op program at the University of Waterloo. My focus is in combinatorics (counting things), optimization, statistics, and pure mathematics.</p>
 
-        <p>In the Fall I'll be a <b class="colorful">data science</b> intern at Facebook in the South Bay. Previously I've interned as a program manager at Microsoft, a mobile developer at Noom, and as a web developer at Tagged (ifwe), and Bazaarvoice.</p>
+        <p>In the Fall I'll be a <b class="colorful">data science</b> intern at Facebook in the South Bay. Previously I've interned as a program manager at Microsoft, a mobile developer at Noom, and as a <b class="colorful">web developer</b> at Tagged (ifwe), and Bazaarvoice.</p>
 
         <p>My studies and internships have taken me around the <b class="colorful">world</b>. I've studied abroad in Hong Kong, and worked in Seattle, NYC, SF, and Austin.</p>
 
