fade in from white

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -32,7 +32,7 @@
     <div class="border bottom"></div>
 
     <div class="icon-container">
-      {{> icon class='purple'}}
+      {{> icon class=''}}
     </div>
 
     <section class="container">
