--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -42,6 +42,37 @@ body {
 
 
 
+.icon-container {
+	height: 250px;
+	width: 100%;
+	margin-top: 100px;
+	margin-bottom: 20px;
+
+	position: fixed;
+	top: 0px;
+	z-index: 50;
+
+	background: rgba(255,255,255,0.9);
+
+}
+
+.icon {
+	height: 100%;
+	width: 100%;
+	z-index: 51;
+
+	g {
+		fill: @white;
+	}
+}
+
+.container {
+	margin-top: 370px;
+}
+
+
+
+
 @black: #000;
 @darkgrey: #4D4D4D;
 @lightgrey: #e1e1e1;
@@ -177,33 +208,6 @@ b.colorful {
   } .-;
 }
 
-
-
-
-
-.icon-container {
-	height: 250px;
-	width: 100%;
-	margin-top: 100px;
-	margin-bottom: 20px;
-
-	position: fixed;
-	top: 0px;
-	z-index: 50;
-
-	background: rgba(255,255,255,0.9);
-
-}
-
-.icon {
-	height: 100%;
-	width: 100%;
-	z-index: 51;
-}
-
-.container {
-	margin-top: 370px;
-}
 
 
 
