--- a/src/index.hbs
+++ b/src/index.hbs
@@ -31,9 +31,9 @@
     <div class="border top"></div>
     <div class="border bottom"></div>
 
-    <div class="icon-container">
+    <header class="icon-container">
       {{> icon class=''}}
-    </div>
+    </header>
 
     <section class="container">
 
@@ -60,9 +60,35 @@
 
         <p>Come say <a href="!!!" target="_blank" class="colorful">hello</a> :)</p>
 
+        <img src="http://www.tcainstitute.com/Images/iStock_000003243029LakeAustin.jpg" alt="">
+
+        <img src="https://a2.muscache.com/locations/uploads/city/hero/20/0_4195_350_2532_hero_USA_SF_Skylines_05_mb.jpg" alt="">
+
+        <img src="http://www.urbansplatter.com/wp-content/uploads/2013/11/nyc001.jpg" alt="">
+
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/75/HKUST_Campus_view_taken_in_2011.jpg" alt="">
+
+        <img src="http://www.flinnferguson.com/wp-content/uploads/2013/03/COA_Seattle.jpg" alt="">
+
       </article>
 
     </section>
+
+    <footer>
+      <p>Thanks for checking out my website. I hope you enjoyed it.</p>
+
+      <p>If you'd like to chat, or make something awesome, tweet or shoot me an email.</p>
+
+      <p>I share moments on Twitter.</p>
+      <p>I share thoughts on Blog.</p>
+      <p>I share process on Github.</p>
+      <p>I share experiences on Github.</p>
+
+      <p>Check out my RESUME</p>
+
+      <p>Made with love in Seattle by Joe</p>
+
+    </footer>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
