--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -15,7 +15,7 @@ body {
 @border-width: 5px;
 
 .border {
-	background: @white;
+	background: transparent;
 	position: fixed;
 	z-index: 99;
 }
@@ -42,7 +42,7 @@ body {
 
 
 
-.icon-container {
+header {
 	height: 250px;
 	width: 100%;
 	margin-top: 100px;
@@ -53,7 +53,6 @@ body {
 	z-index: 50;
 
 	background: rgba(255,255,255,0.9);
-
 }
 
 .icon {
@@ -65,6 +64,18 @@ body {
 		fill: @white;
 	}
 }
+
+footer {
+	// height: 200px;
+	width: 100%;
+	position: relative;
+	bottom: 0px;
+	z-index: 50;
+
+	background-color: @darkgrey;
+	color: @white;
+}
+
 
 .container {
 	margin-top: 370px;
@@ -273,6 +284,12 @@ b.colorful {
 }
 
 
+img {
+	.img-responsive();
+	filter: gray;
+  filter: grayscale(1);
+  -webkit-filter: grayscale(1);
+}
 
 
 
