temp removed resizing

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -48,9 +48,9 @@ header {
 	margin-top: 100px;
 	margin-bottom: 20px;
 
-	position: fixed;
-	top: 0px;
-	z-index: 50;
+	// position: fixed;
+	// top: 0px;
+	// z-index: 50;
 
 	background: rgba(255,255,255,0.9);
 }
@@ -78,7 +78,7 @@ footer {
 
 
 .container {
-	margin-top: 370px;
+	// margin-top: 370px;
 }
 
 
@@ -290,6 +290,8 @@ img {
   filter: grayscale(1);
   -webkit-filter: grayscale(1);
 }
+
+
 
 
 
