--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -81,6 +81,10 @@ footer {
 	// margin-top: 370px;
 }
 
+.mobile {
+
+}
+
 
 
 
@@ -239,6 +243,7 @@ b.colorful {
   width: 30px;
   border-radius: 17px;
   z-index: 52;
+  background-color: @darkgrey;
 }
 
 .dot.colorful {
