--- a/src/index.hbs
+++ b/src/index.hbs
@@ -62,6 +62,7 @@
 
         <div class="date-img">
           <h2 class="date">Winter 2015 - Seattle</h2>
+          <div class="underline colorful"></div>
           <img src="http://www.flinnferguson.com/wp-content/uploads/2013/03/COA_Seattle.jpg" alt="Seattle">
         </div>
 
@@ -75,6 +76,7 @@
 
         <div class="date-img">
           <h2 class="date">Fall 2014 - Hong Kong</h2>
+          <div class="underline colorful"></div>
           <img src="https://upload.wikimedia.org/wikipedia/commons/7/75/HKUST_Campus_view_taken_in_2011.jpg" alt="Hong Kong">
         </div>
 
@@ -88,6 +90,7 @@
 
         <div class="date-img">
           <h2 class="date darkgrey">Summer 2014 - NYC</h2>
+          <div class="underline colorful"></div>
           <img src="http://www.urbansplatter.com/wp-content/uploads/2013/11/nyc001.jpg" alt="NYC">
         </div>
 
@@ -101,6 +104,7 @@
 
         <div class="date-img">
           <h2 class="date">Fall 2013 - SF</h2>
+          <div class="underline colorful"></div>
           <img src="https://a2.muscache.com/locations/uploads/city/hero/20/0_4195_350_2532_hero_USA_SF_Skylines_05_mb.jpg" alt="SF">
         </div>
 
@@ -114,6 +118,7 @@
 
         <div class="date-img">
           <h2 class="date">Winter 2013 - Austin</h2>
+          <div class="underline colorful"></div>
           <img src="http://www.tcainstitute.com/Images/iStock_000003243029LakeAustin.jpg" alt="Austin">
         </div>
 
@@ -127,6 +132,7 @@
 
         <div class="date-img">
           <h2 class="date">Fall 2011 - Waterloo</h2>
+          <div class="underline colorful"></div>
           <img src="http://www.doublespacephoto.com/media/original/KPMB%20toronto%20architectural%20photography%20amanda%20large%20younes%20bounhar%20QNC%20Waterloo-1.jpg" alt="Waterloo">
         </div>
 
