come say hello header

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -58,7 +58,7 @@
 
         <p>I love travelling to new places, trying new things, and making new friends.</p>
 
-        <p>Come say <a href="!!!" target="_blank" class="colorful">hello</a> :)</p>
+        <h2><a href="!!!" target="_blank" class="colorful">Come say hello :)</a></h2>
 
         <div class="date-img">
           <h2 class="date">Winter 2015 - Seattle</h2>
