--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -157,8 +157,23 @@ article {
 	h1, h2 {
 		a {
 			border: none;
+
+			// !!! what effects happen where?
+
+			.transition(color 2s ease-in-out);
+
+		  .-(@i: length(@colors)) when (@i > 0) {
+		    @name: extract(@colors, @i);
+		    &.@{name} {
+		    	&:hover {
+		    		color: @@name;
+		    	}
+		    }
+		    .-((@i - 1));
+		  } .-;
 		}
 	}
+}
 
 	p {
 		font-family: 'Open Sans','Helvetica',sans-serif;
@@ -305,22 +320,6 @@ img {
 	backface-visibility: hidden;
 }
 
-h1, h2 { 
-	a.colorful {
-		.transition(color 2s ease-in-out);
-
-	  .-(@i: length(@colors)) when (@i > 0) {
-	    @name: extract(@colors, @i);
-	    &.@{name} {
-	    	&:hover {
-	    		color: @@name;
-	    	}
-	    }
-	    .-((@i - 1));
-	  } .-;
-	}
-}
-
 a.colorful {
 	.transition(color .2s cubic-bezier(0.165,0.630,0.140,0.820), border-color .2s cubic-bezier(0.165,0.630,0.140,0.820););
 
@@ -409,15 +408,20 @@ b.colorful {
   width: 30px;
   border-radius: 17px;
   z-index: 52;
-  background-color: @darkgrey;
+
+  border: 2px solid @darkgrey;
+  background-color: transparent;
+
+  cursor: pointer;
 }
 
 .dot.colorful {
-	.transition(background-color .2s cubic-bezier(0.165,0.630,0.140,0.820));
+	.transition(border-color .2s cubic-bezier(0.165,0.630,0.140,0.820), background-color .2s cubic-bezier(0.165,0.630,0.140,0.820););
 
   .-(@i: length(@colors)) when (@i > 0) {
     @name: extract(@colors, @i);
     &.@{name} {
+    	border-color: @@name;
     	background-color: @@name;
     }
     .-((@i - 1));
